fixed user info alignment

--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -166,7 +166,7 @@ table.member_table img{
 /* line 9, ../sass/_main.scss */
 div.main_content div.left_side div.user_info {
     background-color: whitesmoke;
-    margin-right: 350px;
+    margin-right: 550px;
     border: 1px;
     border-radius: 5px;
     box-shadow: 10px 5px 5px;
